[package]
name = "processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# let's use the single-threaded environment
tokio = { version = "1.34.0", features = ["rt", "macros"] }
futures-util = "0.3.29"
google-cloud-gax = "0.16.0"
google-cloud-pubsub = "0.21.0"
tokio-util = "0.7.10"
serde_json = "1.0.108"
serde = "1.0.193"
base64 = "0.21.5"
rusqlite = "0.30.0"
